--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
 
     {% if title %}
-        <title>Django Blog - {{ title }}</title>
+        <title>Moose's Blog - {{ title }}</title>
     {% else %}
-        <title>Django Blog</title>
+        <title>Moose's Blog</title>
     {% endif %}
 </head>
 <body>
